adding yes function

--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
 
     <div class="contianer">
         <img id="bear_jumping" src="assets/img/bear_jumping.gif" alt="bear_jumping">
-        <p>Will you be my Valentine?</p>
+        <p>Will you Marry me?</p>
         <div class="buttons">
             <button id="Yes">Yes</button>
             <button id="No">No</button>
         </div>
+
         
     </div>
+    <div class="container-2 hide">
+        <img id="bear_kissing" src="/assets/img/bear_kissing.gif" alt="bear">
+        <p>I knew you'd say yes! 😍😘</p>
+    </div>
+
+    <script src="index.js"></script>
     
 </body>
 </html>
